Fix padding on mobile screens

--- a/src/components/assets/css/style.css
+++ b/src/components/assets/css/style.css
@@ -181,6 +181,7 @@ body {
 .details-text {
 	margin-right: 1rem!important;
 	padding-top: 1em!important;
+	padding-bottom: 1em!important;
 }
 
 .details-image-col {
